fix spacing of card number

--- a/src/index.css
+++ b/src/index.css
@@ -13,12 +13,7 @@
 * {
   font-family: 'Space Grotesk', Avenir, Helvetica, Arial, sans-serif;
   box-sizing: border-box;
-  /* font-size: 18px; */
 }
-
-/* form {
-  margin-top: 35px;
-} */
 
 .card-front {
   position: relative;
@@ -59,6 +54,10 @@
   top: 4.9rem;
 }
 
+.credit-card-form {
+  margin: auto;
+}
+
 form label {
   @apply block uppercase tracking-wide mb-2;
   color: var(--very-dark-violet);
@@ -86,7 +85,6 @@ button {
   .card-front {
     left: 1.5rem;
     top: -1rem;
-    /* bottom: 20rem; */
     height: 225px;
     width: 405px;
     border-radius: 10px;
@@ -98,13 +96,12 @@ button {
 
   .cards-container {
     @apply mt-10 mx-5;
-    /* align-self: center; */
     margin: auto;
   }
 }
 
 .tracking-widest-xl {
-  letter-spacing: 0.25em;
+  letter-spacing: 0.2em;
 }
 
 .dark-violet {
